<resources>
    <string name="app_name">ProELearn</string>
    <string name="welcome">Welcome\nto\nProELearn</string>
    <string name="lets_go">Let\'s go</string>
    <string name="welcome_back">Welcome\nBack</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search">Search</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="group">Group</string>
    <string name="change_password">Change Password</string>
    <string name="vocabulary_list">Vocabulary List</string>
    <string name="save_change">Save change</string>

    <string name="home">Home</string>
    <string name="game">Game</string>
    <string name="profile">Profile</string>
    <string name="group_list">Group List</string>

    <string name="new_user">New user?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="confirm_password">Confirm password</string>

    <string name="play_game">Let\'s Play\nGame!!</string>
    <string name="header_game">Game</string>
    <string name="wrong_answer">Incorrect Answer</string>
    <string name="right_answer">Correct Answer</string>
    <string name="example_eng_word">Love</string>
    <string name="example_vn_word">Tình yêu</string>
    <string name="example_group_type">Hành động</string>
    <string name="type">Type:</string>
    <string name="example_type">Verb</string>
    <string name="example_group">Group:</string>

    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="add_new_group">New group</string>
    <string name="group_name">Group\'s name</string>
    <string name="cancel">Cancel</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="passwords_mismatch">Please make sure your passwords match</string>
    <string name="waitting">Vui lòng chờ...</string>
    <string name="description">Description</string>
</resources>