<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_activity"
    android:orientation="vertical"
    android:paddingBottom="20dp">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_new_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_medium"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            app:titleCentered="true"
            app:title="@string/change_password"/>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white_conner_25"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_key"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/old_password"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white_conner_25"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_key"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/new_password"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white_conner_25"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_confirm"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/confirm_password"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="15dp"
            android:padding="10dp"
            android:background="@drawable/rectangle_white_conner_25"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="15dp"
            android:padding="10dp"
            android:background="@drawable/rectangle_white_conner_25"
            android:layout_marginLeft="50dp"/>
    </LinearLayout>
</LinearLayout>