<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_activity"
    android:orientation="vertical"
    android:paddingBottom="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_new_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_medium"
            >
            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white"
                app:titleCentered="true"
                app:title="@string/add_new_group"/>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_white_conner_25"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="30dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_group"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/edt_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/group_name"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_white_conner_25"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="30dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pencilline3"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/edt_group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/description"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="15dp"
                android:padding="10dp"
                android:background="@drawable/rectangle_white_conner_25"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_confirm"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textSize="15sp"
                android:padding="10dp"
                android:visibility="gone"
                android:background="@drawable/rectangle_white_conner_25"
                android:layout_marginStart="50dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>