<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rectangle_white_conner_25">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/ic_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/img_word"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/default_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/tv_content"/>
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_word"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/example_eng_word"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tv_pronunciation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="/l^v"
        android:textSize="25sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10dp"/>
    <LinearLayout
        android:id="@+id/ln_vn_meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_pronunciation"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_vietnam_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vietnam_flag"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_vn_meaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_vn_word"
            android:textSize="30sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ln_vn_meaning"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_group"
            android:textSize="30sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_group_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_group_type"
            android:textSize="30sp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ln_group"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_word_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="30sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_type"
            android:textSize="30sp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_edit_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        app:fabCustomSize="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:backgroundTint = "@color/main_medium"
        app:srcCompat = "@drawable/pencilline2"
        app:tint="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>