<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.main.fragments.EditWordFragment"
    android:background="@drawable/bg_activity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/main_medium"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            app:titleCentered="true"
            app:title="@string/edit"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
            app:navigationIconTint="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_tool_bar"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        android:layout_marginVertical="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_white_conner_25"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_english_flag"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/edt_english_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_eng_word"
                android:layout_marginStart="20dp"
                android:textSize="30sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_white_conner_25"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_vietnam_flag"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/edt_vn_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_vn_word"
                android:layout_marginLeft="20dp"
                android:textSize="30sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_white_conner_25"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_pronunciation"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/edt_pronunciation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\l^v"
                android:layout_marginLeft="20dp"
                android:textSize="30sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_white_conner_25"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_type"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/spn_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/spinner_type_item"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_white_conner_25"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_group"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_group_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_group_type"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:textSize="30sp"
                android:textColor="@color/black"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:background="@android:color/transparent"
                android:foreground="@drawable/ic_right_arrow"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/img_word"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/default_image"
            android:scaleType="fitXY"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="30sp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_white_conner_25"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>